static/css/base.css
/* Universal Styles */
html {
    height: 100%;
}

body {
    font-family: 'Inter';
    color: #000;
}

h2, h3, h4, h5, h6 {
    font-family: 'Akshar';
    text-transform: uppercase;
}

a {
    text-decoration: none;
}

.hr-decoration {
    position: relative;
    left: -25px;
    width: calc(100% + 50px);
    height: 1px;
}

.btn-blue {
    background-color: #529afe;
    color: #fff;
    border-radius: 0;
    text-transform: uppercase;
    border: 2px solid #529afe;
}

.btn-outline-black {
    border: 2px solid #30323d;
    color: #30323d !important;
    text-transform: uppercase;
    border-radius: 0;
}

.update-link,
.remove-item {
    cursor: pointer;
}

/* Navbar */
#logo {
    font-family: 'Source Sans Pro';
    color: #529afe;
    text-transform: lowercase;
    font-weight: 700;
}

.navbar {
    padding: 0;
}

.navbar-light .navbar-nav .nav-link, .dropdown-item {
    color:#30323d
}

.nav-options {
    text-transform: uppercase;
    font-family: sans-serif;
    font-weight: 800;
}

.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
    color:#feb751;
}

.dropdown-menu {
    border: none;
}


#delivery-banner {
    background-color: #feb751;
    padding-top: 5px;
}

/* Footer */
footer {
    background-color: #30323d;
    color: #fff;
    padding: 20px;
}

footer a {
    color: #fff;
    margin: 0 3px;
}

footer h4 {
    text-transform: uppercase;
}

footer a:hover {
    color:#feb751;
}

/* Gallery */
.gallery img {
    width: 100%;
    object-fit: cover;
    object-position: center;
}

.gallery-sm-img {
    height: 200px;
    margin-bottom: 20px;
}

.gallery-lg-img {
    height: 420px;
}

.image-container {
    position: relative;
    width: 50%;
  }
  
  .image {
    opacity: 1;
    transition: .5s ease;
    backface-visibility: hidden;
  }
  
  .image-grid-hover {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
  }
  
  .image-container:hover .image {
    opacity: 0.4;
  }
  
  .image-container:hover .image-grid-hover {
    opacity: 1;
  }
  
  .text {
      color: #000;
  }

  .text h3 {
      text-transform: lowercase;
      font-family: 'Source Sans Pro';
      color: #529afe;
  }

/* Products */
a.category-badge > span.badge:hover {
    color: #529afe !important;
    border-style: solid !important;
    border-color: #529afe !important;
}

.badge {
    font-size: 100%;
}

/* Basket */

.basket-item {
    padding: 20px 0;
}

#basket-item-title {
    font-size: 1.4rem;
}

.basket-meta {
    font-size: 1.2rem;
    color: #666;
}
  

/* Media Queries */
@media (max-width: 425px) {
    .gallery-sm-img {
        height: 100px;
        margin-bottom: 10px;
    }
    
    .gallery-lg-img {
        height: 210px;
    } 
}

@media (max-width: 991px) {
    .header-container {
        padding-top: 134px;
    }
}

@media (min-width: 992px) {
    .header-container {
        padding-top: 224px;
    }
}

